cmake_minimum_required(VERSION 3.0)
project(Chapter5)

set(HOME ${PROJECT_SOURCE_DIR})
set(EXECUTABLE_OUTPUT_PATH ${HOME}/bin)

include_directories(${HOME}/../cpplib/include)
link_directories(${HOME}/../cpplib/lib)
link_libraries(libStanfordCPPLib.a)
set(CMAKE_BUILD_TYPE Debug)

add_executable(cheoutline ${HOME}/src/CheckoutLine.cpp)
add_executable(lexicon ${HOME}/src/testEnglishDat.cpp)
add_executable(ex01 ${HOME}/src/ex01.cpp)
add_executable(ex02 ${HOME}/src/ex02.cpp)
add_executable(ex04 ${HOME}/src/ex04.cpp)
add_executable(ex06 ${HOME}/src/ex06.cpp)
add_executable(ex07 ${HOME}/src/ex07.cpp)
add_executable(ex08 ${HOME}/src/ex08.cpp)
add_executable(ex09 ${HOME}/src/ex09.cpp)
add_executable(ex10 ${HOME}/src/ex10.cpp)
add_executable(ex11 ${HOME}/src/ex11.cpp)
add_executable(ex12 ${HOME}/src/ex12.cpp)
add_executable(ex13 ${HOME}/src/ex13.cpp)
add_executable(ex14 ${HOME}/src/ex14.cpp)
add_executable(ex15 ${HOME}/src/ex15.cpp)
add_executable(ex16 ${HOME}/src/ex16.cpp)
add_executable(ex17 ${HOME}/src/ex17.cpp)
add_executable(ex18 ${HOME}/src/ex18.cpp)
add_executable(ex19 ${HOME}/src/ex19.cpp)
add_executable(ex19map ${HOME}/src/ex19map.cpp)
add_executable(ex20 ${HOME}/src/ex20.cpp)
add_executable(ex21 ${HOME}/src/ex21.cpp)
add_executable(ex22 ${HOME}/src/ex22.cpp)
add_executable(ex23 ${HOME}/src/ex23.cpp)
