cmake_minimum_required(VERSION 3.0)
project(Assignment)
set(HOME ${CMAKE_SOURCE_DIR})
include_directories(${HOME}/../cpplib/include)
link_directories(${HOME}/../cpplib/lib)
link_libraries(libStanfordCPPLib.a)
set(EXECUTABLE_OUTPUT_PATH ${HOME}/bin)
add_executable(CensorString ${HOME}/src/CensorString.cpp)
add_executable(score ${HOME}/src/Scores.cpp)
add_executable(CountLetters ${HOME}/src/CountLetters.cpp)
add_executable(assign1warmup ${HOME}/src/Assign1warmup.cpp)
