cmake_minimum_required(VERSION 3.0)
project(Assignment)
set(HOME ${CMAKE_SOURCE_DIR})

include_directories(${HOME}/../cpplib/include)
link_directories(${HOME}/../cpplib/lib)
link_libraries(libStanfordCPPLib.a)

set(EXECUTABLE_OUTPUT_PATH ${HOME}/bin)
add_executable(CensorString ${HOME}/src/CensorString.cpp)
add_executable(score ${HOME}/src/Scores.cpp)
add_executable(CountLetters ${HOME}/src/CountLetters.cpp)
add_executable(assign1warmup ${HOME}/src/Assign1warmup.cpp)
add_executable(isperfect ${HOME}/src/IsPerfect.cpp)
add_executable(votingsim ${HOME}/src/VotingSim.cpp)
add_executable(soundexcode ${HOME}/src/SoundexCode.cpp)
add_executable(scorehistogram ${HOME}/src/scoreHistogram.cpp)
add_executable(chaosgame ${HOME}/src/ChaosGame.cpp)

add_executable(removespam ${HOME}/src/RemoveSpam.cpp)
add_executable(rvsqueue ${HOME}/src/ReverseQueue.cpp)
add_executable(countbomb ${HOME}/src/mineSweeper.cpp)

add_executable(randomwriter ${HOME}/src/RandomWriter.cpp)
add_executable(setcallbacks ${HOME}/src/SetCallbacks.cpp)
add_executable(citymap ${HOME}/src/CityMap.cpp)
add_executable(cartProd ${HOME}/src/CartesianProducts.cpp)
add_executable(cannonball ${HOME}/src/Cannonball.cpp)
add_executable(reversestr ${HOME}/src/ReverseString.cpp)
add_executable(gcd ${HOME}/src/GCD.cpp)
add_executable(ismeasurable ${HOME}/src/IsMeasurable.cpp)
add_executable(printinb ${HOME}/src/PrintInBinary.cpp)
add_executable(canmakesum ${HOME}/src/CanMakeSum.cpp)
add_executable(countways ${HOME}/src/CountWays.cpp)
add_executable(drawruler ${HOME}/src/DrawRuler.cpp)
add_executable(everyvotecounts ${HOME}/src/EveryVoteCounts.cpp)
#add_executable(testlex ${HOME}/src/TestLexiconClass.cpp) doesn't work
add_executable(testlex ${HOME}/src/TestLexicon.cpp)
add_executable(listcompletions ${HOME}/src/ListCompletions.cpp)
add_executable(recpuzzle ${HOME}/src/RecursivePuzzle.cpp)
add_executable(stockcutting ${HOME}/src/StockCutting.cpp)

