cmake_minimum_required(VERSION 3.0)
project(Chapter1_CS106B)
set(HOME /home/yy/CS106B/Chapter1)
set(SRC_PATH /home/yy/CS106B/Chapter1/src)
set(INCLUDE_PATH /home/yy/CS106B/cpplib/include)
set(LIBRARY_PATH /home/yy/CS106B/cpplib/lib)
include_directories(${INCLUDE_PATH})
link_directories(${LIBRARY_PATH})
link_libraries(libStanfordCPPLib.a)
set(EXECUTABLE_OUTPUT_PATH ${HOME}/bin)
add_executable(hello ${SRC_PATH}/Hello.cpp)
add_executable(ex01 ${SRC_PATH}/ex01.cpp)
