cmake_minimum_required(VERSION 3.0)
project(Chapter1Exercises)
set(HOME ${CMAKE_SOURCE_DIR})
set(SRC_PATH  ${HOME}/src)
set(INCLUDE_PATH ${HOME}/../cpplib/include)
set(LIBRARY_PATH ${HOME}/../cpplib/lib)
include_directories(${INCLUDE_PATH})
link_directories(${LIBRARY_PATH})
link_libraries(libStanfordCPPLib.a)
set(EXECUTABLE_OUTPUT_PATH ${HOME}/bin)
add_executable(ex01 ${SRC_PATH}/ex01.cpp)
add_executable(ex02 ${SRC_PATH}/ex02.cpp)
add_executable(ex03 ${SRC_PATH}/ex03.cpp)
add_executable(ex04 ${SRC_PATH}/ex04.cpp)
add_executable(ex08 ${SRC_PATH}/ex08.cpp)
