cmake_minimum_required(VERSION 3.0)
project(Chapter2Exercises)
set(HOME ${CMAKE_SOURCE_DIR})
include_directories(${HOME}/../cpplib/include)
include_directories(${HOME}/../myLib/include)
link_directories(${HOME}/../cpplib/lib)
link_libraries(libStanfordCPPLib.a)
link_directories(${HOME}/../myLib/lib)
link_libraries(libcalendar.a)
set(EXECUTABLE_OUTPUT_PATH ${HOME}/bin)
add_executable(ex02 ${HOME}/src/ex02.cpp)
add_executable(testCalendar ${HOME}/src/TestCalendar.cpp)
