cmake_minimum_required(VERSION 3.0.0)
project(Chapter4)
include_directories($ENV{HEADER_PATH_STANFORD_LIB})
link_directories($ENV{LIB_PATH_STANFORD_LIB})
link_libraries($ENV{LIB_NAME_STANFORD_LIB})
set(HOME /home/yy/CS106B/Chapter4)
set(EXECUTABLE_OUTPUT_PATH ${HOME}/bin)
set(SRC_PATH ${HOME}/src)
add_executable(PrecisionExample ${SRC_PATH}/PrecisionExample.cpp)
add_executable(ShowFileContents ${SRC_PATH}/ShowFileContents.cpp)
