cmake_minimum_required(VERSION 3.0)
project(Chapter5)
set(HOME /home/yy/CS106B/Chapter5)
set(EXECUTABLE_OUTPUT_PATH ${HOME}/bin)
set(STANFORLIB_PATH /home/yy/CS106B/cpplib)
include_directories(${STANFORLIB_PATH}/include)
link_directories(${STANFORLIB_PATH}/lib)
link_libraries(libStanfordCPPLib.a)
add_executable(ReverseFile ${HOME}/src/ReverseFile.cpp)
add_executable(LetterFrequency ${HOME}/src/LetterFrequency.cpp)
add_executable(RPNCalculator ${HOME}/src/RPNCalculator.cpp)
add_executable(CheckoutLine ${HOME}/src/CheckoutLine.cpp)
add_executable(AirportCodes ${HOME}/src/AirportCodes.cpp)
add_executable(TwoLetterWords ${HOME}/src/TwoLetterWords.cpp)
add_executable(testEnglishDat ${HOME}/src/testEnglishDat.cpp)
